Small height collapse fix
Video cell collapse on small height fix (when page needs to start
scrolling)

--- a/src/AppBundle/Resources/private/pages/index.scss
+++ b/src/AppBundle/Resources/private/pages/index.scss
@@ -97,6 +97,7 @@ body {
 }
 
 .video {
+  display: table;
   font-size: 0;
   height: 100%;
   left: 0;
